# rust_game_of_life

./: .gitignore  Cargo.toml  README.md  dxdiag.txt
00_winit_029/: README.md  cargo.toml
00_winit_029/src/: main.rs
00_winit_030/: cargo.toml
00_winit_030/src/: main.rs
01_winit_029/: cargo.toml
01_winit_029/src/: main.rs
01_winit_030/: cargo.toml
01_winit_030/src/: main.rs
02/: cargo.toml
02/src/: main.rs
03/: cargo.toml
03/src/: main.rs
04/: cargo.toml
04/src/: main.rs
05/: cargo.toml
05/src/: main.rs
06/: cargo.toml
06/src/: main.rs
07/: cargo.toml
07/src/: gol.rs  lib.rs  main.rs
08/: Cargo.toml
08/src/: config.rs  lib.rs  main.rs
09/: Cargo.toml
09/src/: config.rs  main.rs
10/: Cargo.toml  README.md
10/src/: app.rs  config.rs  main.rs
11/: Cargo.toml  README.md
11/examples/: demo_00.rs  demo_00bis.rs  demo_01.rs  demo_02.rs  demo_03.rs  demo_03bis.rs  demo_04.rs  demo_05.rs  demo_05bis.rs
12/: Cargo.toml  README.md
12/src/: config.rs  gol.rs  main.rs
13/: Cargo.toml  README.md
13/src/: config.rs  error.rs  lib.rs  main.rs
14/: Cargo.toml  README.md
14/src/: config.rs  main.rs
15/: Cargo.toml  README.md
15/src/: config.rs  main.rs
16/: Cargo.toml  README.md
16/src/: config.rs  main.rs
17_winit_029/: Cargo.toml  README.md
17_winit_030/: Cargo.toml  README.md
18/: Cargo.toml  README.md  build.rs
19/: Cargo.toml  README.md  build.rs
20/: Cargo.toml  README.md
99_rle_downloader/: Cargo.toml  README.md  patterns_list.txt
assets/: board_to_window.pptx
rle/: canadagoose_00.rle
(+61 files in other folders)
