[workspace]
members = [
    "00_winit_029",
    "00_winit_030",
    "01_winit_029",
    "01_winit_030",
    "02",
    "03",
    "04",
    "05",
    "06",
    "07",
    "08",
    "09",
    "10",
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17_winit_029",
    "17_winit_030", 
    "18",
    "19",
    "20",
    "99_rle_downloader"
]
resolver = "3" # Read https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions

# Optional: default build profiles for all members
[profile.release]
# lto = true
# codegen-units = 1